--- a/informacion.html
+++ b/informacion.html
@@ -153,7 +153,7 @@
                     <p>Usadas en oficinas y hogares. Pontente y expandible</p>
                 </ul>
             </td>
-            <td><img src="Imagenes/pc antigua.jpg"/>
+            <td><img src="Imagenes/Computador.jpg"/>
         <tr>
             <td>Portatil</td>
             <td>
