--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         }
 
         h1 {
-            background-color: #9d00f8;
+            background-color: #f80000;
             color: white;
             padding: 20px;
             margin: 0;
@@ -20,7 +20,7 @@
         }
 
         nav {
-            background-color: #a200ff;
+            background-color: #ff0000;
             text-align: center;
             padding: 10px 0;
         }
