--- a/trabajo.html
+++ b/trabajo.html
@@ -3,16 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contacto</title>
 </head>
 <body>
-   <table>
+        <h1>Lista de contacto</h1>
+   <table border="1">
+
     <tr>
         <th>ID</th>
         <th>Nombre</th>
         <th>apellido</th>
         <th>telefono</th>
         <th>correo electronico</th>
+    </tr>
+    <tr>
+        <th>001</th>
+        <th>camilo</th>
+        <th>monte</th>
+        <th>132313</th>
+        <th>12313@gmail.com</th>
+    </tr>
+    <tr>
+        <th>002</th>
+        <th>andres</th>
+        <th>atorres</th>
+        <th>312313</th>
+        <th>coadsasda@gmail.com</th>
+    </tr>
+    <tr>
+        <th>003</th>
+        <th>ana</th>
+        <th>lola</th>
+        <th>31412</th>
+        <th>adadsada@gmail.com</th>
     </tr>
    </table> 
 </body>
