--- a/servicios.html
+++ b/servicios.html
@@ -138,7 +138,8 @@
     <li>Placa base</li>
     <li>Fuentes de poder</li>
     <li>Perifericos</li>
-    <p></p>
+    <p>Cada uno de estos componentes cumple una funcion especifica y esencial para el funcionamiento del sistema</p>
+    <p>EL Cpu es considerado el cerebro de la computadora, mientras que la memoria RAm permite trabajar con multiples tareas simultaneas</p>
 <body>
     
 </body>
